--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Override API base at deploy time -->
   <script>
-    window.API_BASE = window.API_BASE || "http://localhost:4000/api";
+    window.API_BASE = "https://draftly-m72w.onrender.com/api";
   </script>
   <link rel="stylesheet" href="styles.css" />
 </head>
